<resources>
    <string name="app_name">Level 1 - Task 2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="AΛB">A Λ B</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="Λ">Λ</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="submit">submit</string>
    <string name="questionmark">?</string>
    <string name="correct">Completely correct</string>
    <string name="incorrect">You made %d mistakes</string>
    <string name="input" />

</resources>