<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConjunctionActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTopA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/A"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTopB"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvTopB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvTopAnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/AΛB"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/tvTopB"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/T"
        app:layout_constraintEnd_toStartOf="@+id/tvB1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopA" />

    <TextView
        android:id="@+id/tvB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/T"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopB" />

    <TextView
        android:id="@+id/tvA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/T"
        app:layout_constraintEnd_toStartOf="@+id/tvB2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopA" />

    <TextView
        android:id="@+id/tvB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopB" />


    <EditText
        android:id="@+id/etTT"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textAllCaps="true"
        android:inputType="textCapCharacters"
        android:gravity="center"
        android:maxLength="1"
        android:digits="FfTt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/tvB1"
        app:layout_constraintTop_toBottomOf="@+id/tvTopAnd" />

    <EditText
        android:id="@+id/etTF"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:textAllCaps="true"
        android:inputType="textCapCharacters"
        android:gravity="center"
        android:maxLength="1"
        android:digits="FfTt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/tvB1"
        app:layout_constraintTop_toBottomOf="@+id/tvTopAnd" />

    <EditText
        android:id="@+id/etFT"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:textAllCaps="true"
        android:digits="FfTt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/tvB1"
        app:layout_constraintTop_toBottomOf="@+id/tvTopAnd" />

    <EditText
        android:id="@+id/etFF"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:textAllCaps="true"
        android:digits="FfTt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/tvB1"
        app:layout_constraintTop_toBottomOf="@+id/tvTopAnd" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>